data/collection/fixes/descriptions/java/JDK-7043922
J2SE Version (please include all output from java -version flag):
 JDK 7 b141

Does this problem occur on J2SE 1.4.x, 1.5 or 6?  Yes / No (pick one)
 No, works fine with 6u25

Operating System Configuration Information (be specific):
  Windows and Linux platform

Bug Description:

  With jdk7 "b141 fastdebug", customer encounter compile errors, 
  the same code compiles fine with 6u25:

<snip>
Compiling 124 source files
to /home/pfeiler/workspace/FS_Trunk/libraries/common/target/test
warning: [options] bootstrap class path not set in conjunction with
-source 1.5
..../src/test/de/espirit/common/basetest/control/TestActionProcessor.java:247: error: internal error; cannot instantiate <anonymous de.espirit.common.basetest.control.TestActionProcessor$6$1>() at <anonymous HandleAsyncCallback> to ()
                                return Handle.async(new
HandleAsyncCallback() {
                                                    ^
</snip>

attached a zip(complie_error_src.zip) with the minimal set of source files to reproduce the issue.
